--- a/vk_api_service/Dockerfile
+++ b/vk_api_service/Dockerfile
@@ -1,4 +1,9 @@
 FROM python:3.10-slim
+
+RUN apt-get update \
+    && apt-get install -y nano \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN mkdir /app
 COPY requirements.txt /app
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
